# tokel_dapp

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .importsortrc.js  .prettierrc  CHANGELOG.md  LICENSE  README.md  babel.config.js  package-lock.json  package.json  postcss.config.js  renovate.json  tailwind.config.js  tsconfig.json
.erb/configs/: webpack.config.renderer.dev.babel.js  webpack.config.renderer.prod.babel.js
.erb/scripts/: CheckBuildsExist.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-Bug_report.md  3-Feature_request.md
.github/workflows/: pr-to-dev.yml  pr-to-main.yml  publish.yml
.husky/: pre-commit
assets/: icon.icns
assets/fonts/: fonts.css  sourcesanspro-regular-webfont.eot  sourcesanspro-semibold-webfont.eot
brand_package/: README.md
config/: assets.d.ts  patch_macos_dev.js
config/scripts/: CheckBuildsExist.js  CheckNativeDep.js  ElectronRebuild.js  paths.js
config/webpack/: webpack.config.base.js  webpack.config.eslint.js  webpack.config.main.prod.babel.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.dev.dll.babel.js  webpack.config.renderer.dev.module.babel.js  webpack.config.renderer.module.babel.js  webpack.config.renderer.prod.babel.js
include/binaries/libnspv/: coins  nspv  nspv-linux  nspv-mac
src/: App.tsx  index.html  index.tsx  main.dev.ts  package.json
src/assets/fonts/: sourcesanspro-bold-webfont.eot
src/binaries/libnspv/: .gitignore  Makefile.am  README.md  coins  libbtc.pc.in  nspv  nspv.old  onetime
src/binaries/libnspv/html/: errors  send_confirm  send_validate_txvout_table_row.inc  txidinfo  wallet_mempool_table_row.inc
src/binaries/libnspv/html/languages/: chinese_traditional.json  hindi.json  korean.json
src/binaries/libnspv/include/: cJSON.h  curve25519.h
src/binaries/libnspv/include/btc/: block_kmd.h  ecc_key.h  merkle_c.h  protocol.h  ripemd160.h  script.h
src/binaries/libnspv/rpctest/: buildbot.py  requirements.txt  test_nspv.py
src/binaries/libnspv/src/: block  block_kmd.c  ecc_libsecp256k1.c  netspv.c  protocol.c  segwit_addr.c  tx.c  wallet.c
src/binaries/libnspv/src/logdb/test/: logdb_tests.c
src/binaries/libnspv/src/secp256k1/: README.md
src/binaries/libnspv/src/tools/: bitcoin-send-tx.c  bitcoin-spv.c  cJSON.c  curve25519.c  nSPV_CCUtils.h  nSPV_CCtx.h  nSPV_htmlgui.h  nSPV_jpeg.h  nSPV_rpc.h  nSPV_superlite.h  nspv.c  tweetnacl.c
src/binaries/libnspv/src/tools/cryptoconditions/src/: cryptoconditions.c
src/binaries/libnspv/src/tools/cryptoconditions/src/include/ed25519/: readme.md
src/binaries/libnspv/src/tools/cryptoconditions/src/include/secp256k1/: Makefile.am
src/binaries/libnspv/src/tools/cryptoconditions/src/include/secp256k1/src/: ecmult_const.h
src/binaries/libnspv/src/tools/jpeg/: jmorecfg.h
src/binaries/libnspv/test/: protocol_tests.c  tx_tests.c
src/components/: App.tsx  BitgoOrchestrator.tsx  Button.tsx  Input.tsx  NspvIndicator.tsx  SmallButton.tsx  TopBar.tsx  WindowControls.tsx
src/components/CreateToken/: ConfirmTokenCreationModal.tsx  CreateToken.tsx  Form.tsx  TokenCreatedTx.tsx
src/components/Dashboard/: AssetView.tsx  AssetsGraph.tsx  Dashboard.tsx  PortfolioValueGraph.tsx  Portoflio.tsx  RecentActivity.tsx  TokenView.tsx  index.html  index.tsx
src/components/Dashboard/Menu/: MenuItem.tsx  SideMenu.tsx  TopBar.tsx  data.js
src/components/Dashboard/Portfolio/: Portfolio.tsx  PortfolioItem.tsx  Tokens.tsx
src/components/Dashboard/Portofolio/: Header.tsx  Portfolio.tsx  PortfolioItem.tsx  PortoflioItem.tsx
src/components/Dashboard/__tests__/: Dashboard.test.tsx
src/components/Dashboard/assets/: icons.js
src/components/Dashboard/widgets/: ActivityTable.tsx  LineGraph.tsx  PieChart.tsx  StandardWidget.tsx  TokenDetailWidget.tsx  Wallet.tsx  common.tsx
src/components/Entry/: Entry.tsx
src/components/Home/: Home.tsx  TopBar.tsx  User.tsx
src/components/Login/: ConfirmString.tsx  CredentialsRow.tsx  GeneratedCredentials.tsx  Loader.tsx  Login.tsx  LoginForm.tsx  Warning.tsx  index.html  index.tsx
src/components/Marketplace/: ConfirmOrderCancelModal.tsx  ConfirmOrderModal.tsx  Marketplace.tsx  OrderCreatedTx.tsx
src/components/Modal/: Modal.tsx
src/components/Settings/: ChangePasswordForm.tsx  NetworkPrefs.tsx  Settings.common.tsx  Settings.tsx  Updater.tsx
src/components/_General/: BackButton.tsx  Button.tsx  CloseButton.tsx  CopyTextInput.tsx  CopyToClipboard.jsx  CopyToClipboard.tsx  ErrorMessage.tsx  ExplorerLink.tsx  GenericPanel.tsx  Grid.tsx  InfoNote.tsx  Input.tsx  InputWithLabel.tsx  Link.tsx  Logo.tsx  OpenInExplorer.tsx  ProgressBar.tsx  Select.tsx  SmallButton.tsx  Spinner.tsx  TextArea.tsx  TokenMediaDisplay.tsx  ValueRow.tsx  WarningCritical.tsx  WarningFriendly.tsx  buttons.tsx  forms.tsx  icons.tsx
src/data/: icons.js
src/electron/: .testcafe-electron-rc.json  dev-app-update.yml  externalMedia.html  index.html  ipfsHelper.js  main.ts  menu.ts  package.json  worker.js  workerHelper.js
src/encryption/: core.ts  encKeyIsolation.ts  keychain.ts
src/hooks/: lock-scroll.ts  platform.tsx  useDebounce.ts  useMyCollections.ts  useMyConstellations.ts  useMyTokens.ts  usePrevious.ts
src/store/: AccountContext.tsx  rematch.ts  selectors.ts
src/store/models/: account.ts  currentTransaction.ts  environment.ts  marketplace.ts  models.ts  tokenCreation.ts  wallet.ts
src/styles/: global.css  variables.css
src/tests/mock/: electron.js
src/util/: bitgoHelper.ts  electron.ts  formatTokenFormIntoStandard.ts  helpers.ts  history.tsx  icons.ts  insightApi.ts  links.ts  networks.js  nspv-bitgo.js  nspv.js  nspvlib-mock.ts  nspvlib.js  theming.ts  token-mock.ts  token-types.ts  transacations.ts  transactions.ts  transactionsHelper.js  txHelper.ts  workerHelper.ts
src/util/types/: BigNum.ts  Theme.ts  TokenType.ts
src/util/validators/: tokenCreationSchema.ts  useFulfillOrderSchema.ts  useMarketOrderSchema.ts  useTokenCreationSchema.ts
src/vars/: defines.ts  types.ts
src/vars/styles/: global.css  platformSpecific.ts  styles.js  variables.css
tests-e2e/: Login.e2e.ts
(+61 files in other folders)
